--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,42 @@
 {
   "name": "hepeco-backend",
   "version": "1.0.0",
-  "description": "Backend API for Hepeco Digital - Mobile Money Payments & WhatsApp Integration",
+  "description": "Hepeco Digital - Secure Payment and WhatsApp Integration Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "whatsapp",
+    "payment",
+    "security",
+    "malawi",
+    "digital-solutions"
+  ],
+  "author": "Hepeco Digital",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "axios": "^1.6.0",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0",
     "qrcode": "^1.5.3",
-    "whatsapp-web.js": "^1.23.0"
+    "dotenv": "^16.3.1",
+    "whatsapp-web.js": "^1.23.0",
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=16.0.0"
-  }
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/hepeco-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/hepeco-backend/issues"
+  },
+  "homepage": "https://github.com/yourusername/hepeco-backend#readme"
 }
